Se genera la conexion con la base de datos y se crea los archivos para las vistas

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "electron-reload": "^2.0.0-alpha.1",
     "vite": "^7.1.12",
     "wait-on": "^9.0.1"
+  },
+  "dependencies": {
+    "pg": "^8.16.3"
   }
 }
